# pixel-sum

./: CMakeLists.txt  Makefile  PixelSum.cpp  PixelSum.h  Questions.md  README.md  Tests.cpp  Tests.h  UnitTest.cpp  UnitTest.h  a.out  main.cpp  testpixelsum
a.out.dSYM/Contents/Resources/DWARF/: a.out
tests/: TestCases.cpp  TestCases.h  TestClampBorderPoints.cpp  TestClampBorderPoints.h  TestSwapPoints.cpp  TestSwapPoints.h  UnitTest.cpp  UnitTest.h  dataForTestClampBorderPoints.h  dataForTestSwapPoints.h
